# arc

./: .clang-format  .gitignore  .gitmessage  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  bench.sh  build.bat  build.md  debug.txt  keylog.txt  out.txt  perf.data  perf.data.old  quickstart.md  test  themes.md
.config/arc/themes/: default.theme  github_dark.theme  gruvbox_light.theme  high_constrast_dark.theme  monokai.theme  onedark.theme  solarized_light.theme  tokyo_night.theme  vscode_light.theme
.config/arceditor/: config.yaml
.config/arceditor/syntax_rules/: cpp.yaml  markdown.yaml  py.yaml  registry.yaml  rs.yaml
.config/arceditor/themes/: catppuccin-mocha.theme  cyberpunk-neon.theme  default.theme  dracula.theme  github_dark.theme  gruvbox_dark.theme  gruvbox_light.theme  high_constrast_dark.theme  monokai.theme  onedark.theme  solarized_dark.theme  solarized_light.theme  tokyo_night.theme  vscode_light.theme
runtime/: languages.toml  languages.yaml
runtime/queries/_javascript/: highlights.scm
runtime/queries/_jsx/: highlights.scm
runtime/queries/bash/: highlights.scm
runtime/queries/ecma/: highlights.scm
runtime/queries/lua/: indents.scm
runtime/queries/markdown/: highlights.scm
runtime/queries/ruby/: highlights.scm
runtime/queries/zig/: highlights.scm
runtime/themes/: catppuccin_mocha.theme  cyberpunk_neon.theme  default.theme  dracula.theme  gruvbox_dark.theme  solarized_dark.theme  tokyo_night.theme
samples/: essay.md  example.py  oldmain.cpp  simpletest.txt  test.txt
samples/c/: file.c
samples/c/clang/: compilerinstance.h  sema.h
scripts/: add_language.sh  implement_queries.sh  organize_test_examples.sh
src/: main.cpp
src/benchmark/: benchmark.cpp  benchmark.h
src/core/: application.cpp  application.h  args_parser.cpp  args_parser.h  buffer.cpp  buffer.h  clipboard.cpp  clipboard.h  command_line.cpp  command_line.h  command_palette.h  config_manager.cpp  config_manager.h  editor.cpp  editor.h  editor_delta.h  editor_loop.cpp  editor_loop.h  editor_validation.h  file_browser.cpp  file_browser.h  gap_buffer.cpp  gap_buffer.h  logger.h
src/core/signals/: signal_handler.cpp  signal_handler.h
src/features/: command.h  indent_manager.h  markdown_state.h  query_manager.h  syntax_config_loader.cpp  syntax_config_loader.h  syntax_highlighter.cpp  syntax_highlighter.h
src/modes/: browser_mode.cpp  browser_mode.h  editor_mode.cpp  editor_mode.h
src/ui/: browser_renderer.cpp  browser_renderer.h  colors.cpp  colors.h  icon_provider.cpp  input_handler.cpp  input_handler.h  renderer.cpp  renderer.h  style_manager.cpp  style_manager.h  theme_manager.cpp  theme_manager.h
src/utils/: binary_detector.h
themes/: catppuccin-mocha.theme  default.theme  dracula.theme  github-dark.theme  github-light.theme  gruvbox-dark.theme  gruvbox-light.theme  monokai.theme  onedark.theme  solarized-dark.theme
treesitter/: languages.yaml
treesitter/queries/_typescript/: highlights.scm
treesitter/queries/css/: highlights.scm
treesitter/queries/rust/: highlights.scm
